# HeXuS

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/hexus-core/: Cargo.toml
crates/hexus-core/src/: analysis.rs  lib.rs  models.rs  storage.rs
crates/hexus-desktop/: Cargo.toml
crates/hexus-desktop/src/: lib.rs
docs/: ARCHITECTURE.md  BACKLOG.md  RESEARCH.md
docs/adr/: 001-tech-stack.md
docs/funding/: NLNET-APPLICATION-DRAFT.md  NLNET-CALL-PREP.md
docs/research/: SYNTHESIS.md  VALIDATION.md  accessibility.md  community-insights.md  competitive-analysis.md  ml-approaches.md  privacy-legal.md  scientific-literature.md  technology-landscape.md
