[workspace]
resolver = "2"
members = [
    "crates/hexus-core",
    "crates/hexus-desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/SilverSix311/HeXuS"
authors = ["SilverSix311", "Silas Vane"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
